--- a/apps/dashboard/src/app/project/project.component.html
+++ b/apps/dashboard/src/app/project/project.component.html
@@ -6,6 +6,7 @@
         <mat-card-title> <h1>Projects</h1> </mat-card-title>
       </mat-card-header>
       <mat-card-content>
+        <!-- Useful Dump <pre>{{ projects | json }}</pre> -->
         <mat-list>
           <mat-list-item>
             <h3 mat-line><!-- PROJECT DETAILS --></h3>
