--- a/apps/dashboard/src/app/project/project.component.html
+++ b/apps/dashboard/src/app/project/project.component.html
@@ -8,7 +8,10 @@
       <mat-card-content>
         <!-- Useful Dump <pre>{{ projects | json }}</pre> -->
         <mat-list>
-          <mat-list-item *ngFor="let project of projects">
+          <mat-list-item
+            (click)="selectProject(project)"
+            *ngFor="let project of projects"
+          >
             <h3 mat-line>{{ project.title }}</h3>
             <p mat-line>{{ project.details }}</p>
             <button mat-icon-button><mat-icon>close</mat-icon></button>
