--- a/apps/dashboard/src/app/project/project.component.html
+++ b/apps/dashboard/src/app/project/project.component.html
@@ -8,6 +8,7 @@
       <mat-card-content>
         <!-- Useful Dump <pre>{{ projects | json }}</pre> -->
         <mat-list>
+          <!-- Add one line down (click)="eventTest($event)" -->
           <mat-list-item
             (click)="selectProject(project)"
             *ngFor="let project of projects"
