Adding conitional selectedProject (exists?)

--- a/apps/dashboard/src/app/project/project.component.html
+++ b/apps/dashboard/src/app/project/project.component.html
@@ -26,7 +26,7 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>
-          <h1><!-- PROJECT TITLE HERE --></h1>
+          <h1>{{ selectedProject?.title }}</h1>
         </mat-card-title>
       </mat-card-header>
       <form>
