--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -20,8 +20,5 @@
     </nav>
   </mat-sidenav>
 
-  <div class="app-content">
-    <app-project></app-project>
-    <router-outlet></router-outlet>
-  </div>
+  <div class="app-content"><router-outlet></router-outlet></div>
 </mat-sidenav-container>
