--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -13,9 +13,15 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav mode="side" opened class="app-sidenav">
     <nav>
-      <a mat-button class="nav-link">
-        <mat-icon> <!-- LINK ICON --> </mat-icon>
-        <!-- LINK LABEL -->
+      <a
+        mat-button
+        class="nav-link"
+        [routerLink]="link.path"
+        [routerLinkActive]="active"
+        *ngFor="let link of links"
+      >
+        <mat-icon>{{ link.icon }}</mat-icon>
+        {{ link.title }}
       </a>
     </nav>
   </mat-sidenav>
