Added styles, html template, and @Input to todo-item component

--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -1,8 +1,13 @@
+.todo-item {
+  padding: 5px 10px;
+}
+
 .del {
   border-radius: 50%;
   background-color: red;
   color: white;
   border: none;
+  padding: 1px 6px;
 
   &:hover {
     cursor: pointer;
