--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,7 +1,5 @@
-<div>
-  <p>
-    <input type="checkbox" />
-    {{ todo.title }} - Complete: {{ todo.complete }}
-    <button class="del">x</button>
-  </p>
-</div>
+<p class="todo-item">
+  <input type="checkbox" />
+  {{ todo.title }} - Complete: {{ todo.complete }}
+  <button class="del">x</button>
+</p>
