Added test events and ngClass to add line though

--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,5 +1,5 @@
-<p class="todo-item">
-  <input type="checkbox" />
+<p class="todo-item" [ngClass]="setClasses()">
+  <input type="checkbox" (change)="onToggle(todo)" />
   {{ todo.title }} - Complete: {{ todo.complete }}
-  <button class="del">x</button>
+  <button class="del" (click)="onDelete(todo)">x</button>
 </p>
