Fixed styles and added them to one master todo parent

--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -3,5 +3,5 @@
   <span [ngClass]="setClasses()" class="todo__text">
     {{ todo.title }} - Complete: {{ todo.complete }}
   </span>
-  <button class="del" (click)="onDelete(todo)">x</button>
+  <button class="todo__delBtn" (click)="onDelete(todo)">x</button>
 </p>
