Added styles to todo-item container... doesn't look much nicer though.

--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -2,7 +2,11 @@
   &__container {
     margin: 5px 10px;
     display: flex;
+    color: #555;
     align-items: center;
+    background: #dcdcdc;
+    padding: 5px;
+    border-radius: 5px;
   }
 
   &__text {
