--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -10,7 +10,7 @@
   }
 
   &__text {
-    margin: 5px;
+    margin: 5px 25px 5px 5px;
 
     &.is-complete {
       text-decoration: line-through;
@@ -22,7 +22,10 @@
     background-color: red;
     color: white;
     border: none;
-    padding: 1px 6px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 20px;
 
     &:hover {
       cursor: pointer;
