--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,4 +1,9 @@
 <div>
   <h1 class="todos__title">Todos</h1>
-  <app-todo-item *ngFor="let todo of todos" [todo]="todo"> </app-todo-item>
+  <app-todo-item
+    *ngFor="let todo of todos"
+    [todo]="todo"
+    (deleteTodo)="deleteTodo($event)"
+  >
+  </app-todo-item>
 </div>
